Add GitHub profile link to footer

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
         <div class="footer-content">
           <img src="https://antigravity.google/assets/image/antigravity-logo.png" alt="Antigravity Logo"
             class="footer-logo">
-          <span>Created by Charlotte Lau and <a href="https://antigravity.google" target="_blank"
+          <span>Created by <a href="https://github.com/charlotte-lau-hk/" target="_blank" class="footer-link">Charlotte
+              Lau</a> and <a href="https://antigravity.google" target="_blank"
               class="footer-link">Antigravity</a></span>
         </div>
       </footer>
