feat: Interactive bits, WCAG compliance fixes, and cursor polish

--- a/index.html
+++ b/index.html
@@ -30,41 +30,41 @@
       <aside class="input-panel" id="input-panel">
         <div class="panel-header">
           <h2>Inputs</h2>
-          <button id="close-inputs" class="close-btn mobile-only">&times;</button>
+          <button id="close-inputs" class="close-btn mobile-only" aria-label="Close">&times;</button>
         </div>
         <div class="inputs-list">
           <!-- 8 Inputs -->
           <div class="input-group">
-            <label>Row 1</label>
-            <input type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="0" />
+            <label for="row-1">Row 1</label>
+            <input id="row-1" type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="0" />
           </div>
           <div class="input-group">
-            <label>Row 2</label>
-            <input type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="1" />
+            <label for="row-2">Row 2</label>
+            <input id="row-2" type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="1" />
           </div>
           <div class="input-group">
-            <label>Row 3</label>
-            <input type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="2" />
+            <label for="row-3">Row 3</label>
+            <input id="row-3" type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="2" />
           </div>
           <div class="input-group">
-            <label>Row 4</label>
-            <input type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="3" />
+            <label for="row-4">Row 4</label>
+            <input id="row-4" type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="3" />
           </div>
           <div class="input-group">
-            <label>Row 5</label>
-            <input type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="4" />
+            <label for="row-5">Row 5</label>
+            <input id="row-5" type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="4" />
           </div>
           <div class="input-group">
-            <label>Row 6</label>
-            <input type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="5" />
+            <label for="row-6">Row 6</label>
+            <input id="row-6" type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="5" />
           </div>
           <div class="input-group">
-            <label>Row 7</label>
-            <input type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="6" />
+            <label for="row-7">Row 7</label>
+            <input id="row-7" type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="6" />
           </div>
           <div class="input-group">
-            <label>Row 8</label>
-            <input type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="7" />
+            <label for="row-8">Row 8</label>
+            <input id="row-8" type="number" min="0" max="255" placeholder="0" class="decimal-input" data-index="7" />
           </div>
         </div>
       </aside>
