--- a/index.html
+++ b/index.html
@@ -178,10 +178,16 @@
 
     <footer>
       <div class="footer-content">
-        <img src="https://antigravity.google/assets/image/antigravity-logo.png" alt="Antigravity Logo"
-          class="footer-logo">
-        <span>Created by <a href="https://github.com/charlotte-lau-hk/" target="_blank" class="footer-link">Charlotte
-            Lau</a> and <a href="https://antigravity.google" target="_blank" class="footer-link">Antigravity</a></span>
+        <span>Created by</span>
+        <a href="https://github.com/charlotte-lau-hk/" target="_blank" class="footer-link">
+          <img src="./charlotte-lau.png" alt="Charlotte Lau" class="footer-icon avatar">
+          Charlotte Lau
+        </a>
+        <span>and</span>
+        <a href="https://antigravity.google" target="_blank" class="footer-link">
+          <img src="https://antigravity.google/assets/image/antigravity-logo.png" alt="Antigravity" class="footer-icon">
+          Antigravity
+        </a>
       </div>
     </footer>
   </div>
