Use GitHub hosted avatar for Charlotte Lau

--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
       <div class="footer-content">
         <span>Created by</span>
         <a href="https://github.com/charlotte-lau-hk/" target="_blank" class="footer-link">
-          <img src="./charlotte-lau.png" alt="Charlotte Lau" class="footer-icon avatar">
+          <img src="https://avatars.githubusercontent.com/u/98373438?v=4&s=120" alt="Charlotte Lau"
+            class="footer-icon avatar">
           Charlotte Lau
         </a>
         <span>and</span>
